2014-02-11 Massimo Manghi <mxmanghi@apache.org>
    * tests/rivetlib.test: adding tests for rivetlib
    * rivet/packages/dio/aida.tcl,sql.tcl: new files for development of DIO compatible interface to tdbc
    * rivet/rivet-tcl/lassign_array.tcl: removed since already provided in rivetlib
    * docs/xml/commands.xml: documenting features of lassign_array.tcl rivetlib version 

2014-02-06 Massimo Manghi <mxmanghi@apache.org>
    * ChangeLog: timestamps of latest entries of this file carried the wrong year (2013)
    * rivet/packages/dio/dio_Mysql.tcl: fixed comment lines placed within the switch construct
    that have become incompatibile with Tcl8.6. 
    * configure.ac: add AC_C_INLINE macro

2014-02-04 Massimo Manghi <mxmanghi@apache.org>
    * src/rivetcmd/rivetCore.c: testing globals->r against NULL and in case return a null string
    * src/apache-2/mod_rivet.c: using only globals->r to flag a request processing under way
 
2014-02-03 Massimo Manghi <mxmanghi@apache.org>
    * src/apache-2/mod_rivet.c: globals->req had to be set to NULL in Rivet_PerInterpInit!

2014-02-02 Massimo Manghi <mxmanghi@apache.org>
    * src/apache-2/mod_rivet.[c|h]: further optimizing code avoiding to
    allocate a TclWebRequest structure on every request. This structure
    is allocate when the interpreter is initialized and a pointer
    stored in rivet globals
    * src/rivetcmd/rivetInspect.c: impoved consistence if Tcl objects handling

2014-01-30 Massimo Manghi <mxmanghi@apache.org>
    * src/apache-2/mod_rivet.c: this ChangeLog entry is meant to amend the
    2014-01-27 entry that missed to point out as small still important change
    in mod_rivet.c. Rivet_SendContent is not calling Tcl anymore to coax 
    command 'info script' to return the current Rivet script full path. This
    will soon be solved by adding a new functionality to command '::rivet::inspect' 
    
2014-01-27 Massimo Manghi <mxmanghi@apache.org>